--- a/templete/style.css
+++ b/templete/style.css
@@ -72,6 +72,7 @@ a:hover {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    /* responsive*/
 }
 
 .products li {
@@ -112,4 +113,42 @@ a:hover {
 
 .product-rating {
     margin-bottom: 1rem;
+}
+
+
+/* sidebar */
+
+.brand button {
+    font-size: 3rem;
+    padding: .5rem;
+    background: none;
+    border: none;
+    color: #ffff;
+    cursor: pointer;
+}
+
+.sidebar {
+    position: fixed;
+    transform: translateX(-30rem);
+    width: 30rem;
+    background-color: #f0f0f0;
+    height: 100%;
+}
+
+.sidebar.open {
+    transform: translateX(0);
+}
+
+.sidebar-close-button {
+    border-radius: 50%;
+    border: .1rem #000000 solid;
+    width: 3rem;
+    height: 3rem;
+    padding: .5rem;
+    font-size: 2rem;
+    padding: 0;
+    cursor: pointer;
+    position: absolute;
+    right: .5rem;
+    top: 1.5rem;
 }
